--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,3 @@
-/* 
-  .navbar a:hover {
-    background-color: #8A0707;
-  }
- */
 /* Fonts */
 @font-face {
   font-family: MurderMystery;
@@ -21,16 +16,12 @@
   src: url(../assets/AmaticSC-Bold.ttf);
 }
 /* Main */
-
 html {
   scroll-behavior: smooth;
 }
-
 body {
   background-color: #212121;
-
 }
-
 /* Navbar */
 .home {
   float: left;
@@ -42,21 +33,20 @@ body {
   font-family: Murder;
   font-size: 23px
 }
-.navbar {
-  float: fixed;
+.navigation {
+  position: fixed;
   margin: 0;
   padding: 0;
   list-style-type: none;
   overflow: hidden;
-  background-color: #212121;
-  position: fixed;
+  background-color: #212121 !important;
   top: 0;
   width: 100%;
 }
 .nav-item {
   float: right;
   display: block;
-  color: #E6E4DC;
+  color: #EEF1BC;
   text-align: right;
   padding: 14px 20px;
   text-decoration: none;
@@ -70,34 +60,132 @@ body {
   font-size: 20px;
   padding: 10px
 }
-.mt-12 {
-  margin-top: 10rem;
+/* Big Title */
+.hero {
+  background-color: #212121 !important;
+  margin-left: 0;
+  margin-right: 0;
+  box-sizing: 100%;
+  width: auto;
 }
 .p-title {
   display: flex;
   justify-content: center;
-  margin-bottom: 10rem;
+  margin-bottom: 6rem;
   font-family: Murder;
   font-size: 76px;
-  color: white;
-
+  color: #EEF1BC;
+  padding-top: 10rem;
+  text-shadow: 5px 5px 10px #8A0707
+}
+.p-subhead {
+  display: flex;
+  justify-content: center;
+  font-family: Newspaper;
+  color: #EEF1BC;
+  padding-top: 0rem
 }
 #point {
   color: #212121;
 }
+/* Stickman running */
 #stickman {
   max-width: 100%;
-  height: 100px;
+  height: 90px;
 }
 .running {
   float: right;
+  margin-right: 2rem
 }
 .resting {
   float: left;
+  margin-left: 2rem
 }
 .walking {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 30rem;
+  margin-right: 10rem;
+}
+/* Content Landing Page */
+.author{
+  color: #1a2c57;
+  font-family: Newspaper;
+  text-shadow: 3px 3px 2px #212121;
+}
+.author1 {
+  font-size: 23px !important;
+}
+.important {
+  display: flex;
+  justify-content: right;
+  padding-right: 2rem;
+  color:#e5be5b;
+  font-family: Newspaper;
+  padding-top: 13rem;
+  font-size: small;
+  text-shadow: 1px 1px 2px #212121;
+}
+.stickmen {
+  padding-right: 2rem;
 }
 
+.div-content {
+  padding-top: 2rem
+}
+.anthony {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-left: 30rem;
+  box-shadow: 0 5px 9px 0 rgba(0, 0, 0, 0.2), 0 7px 25px 0 rgba(0, 0, 0, 0.19);
+}
+.author1 {
+  padding: 0rem;
+  text-indent: 50px;
+  color: #e5be5b;
+  font-family: Newspaper;
+  font-size: 30px;
+  text-shadow: 3px 3px 2px #212121;
+}
+/* Footer */
+.footer {
+  background-color: #212121 !important;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  position: relative;
+}
+.div-footer {
+  /* display: flex;
+  justify-content: center; */
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  color: #e5be5b;
+}
+.title-footer {
+  display: flex;
+  justify-content: center;
+  font-family: Murder;
+}
+#cp-year {
+  display: flex;
+  justify-content: center;
+}
+.small-icon {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 2rem;
+}
+.github {
+  color: #e5be5b;
+}
+.content {
+  background-color: #8A0707;
 
+}
+.waves {
+  background-color: #8A0707;
+}
+/* ANIMATION LANDING PAGE */
+
+
+/* END ANIMATION LANDING PAGE */
