--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,7 @@ html {
 }
 body {
   background-color: #212121;
+  cursor: url(/assets/icons8-3d-pointer-24.png), auto ;
 }
 /* Navbar */
 .home {
@@ -65,6 +66,7 @@ body {
 }
 .navigation {
   position: fixed;
+  z-index: 2;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -120,7 +122,6 @@ body {
   margin-left: 30px;
   margin-top: 2px;
 }
-
 @keyframes floating {
   0% { transform: translate(0,  -50px); }
   /* 50%  { transform: translate(0, -15px); } */
@@ -242,7 +243,89 @@ body {
 .waves {
   background-color: #8A0707;
 }
-/* ANIMATION LANDING PAGE */
 
+/* LANDING PAGE ^ */
 
-/* END ANIMATION LANDING PAGE */
+/* NEWSPAPER PAGE */
+.img-newspaper {
+  width: 50%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+  border-radius: 2%;
+  animation-name: floating;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+}
+/* RIDDLES PAGE */
+.box-around {
+  padding-top: 5rem;
+  display: flex ;
+  justify-content: center ;
+  font-size: 20px;
+  font-family: Diary;
+  color: #e5be5b;
+  font-weight: bold;
+}
+.inputs-riddles {
+  border: 2px solid #8A0707;
+
+  border-radius: 10px;
+  box-sizing: border-box;
+  height: 500px;
+  width: 400px;
+  padding-left: 2rem;
+  padding-right: 1rem;
+  box-shadow: #3C1B1B 0px 22px 70px 4px;
+  animation-name: floating;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+  background-color: #212121;
+}
+.svg-riddles {
+  z-index: -1;
+  left: 0;
+  top: 0
+}
+.riddles-paragraph-game {
+  letter-spacing: 0.01rem;
+}
+/* Riddle Game */
+.reveal-btn {
+  background-color: transparent;
+  align-items: flex-start; 
+}
+.div-button {
+  justify-content: center;
+  display: flex;
+  margin-top: 1rem;
+  padding: auto; 
+}
+input[type="text"] {
+  background-color: transparent;
+  outline: none;
+  border-right: none;
+  border-top: none;
+  border-left: none;
+}
+input[type="text"]:focus {
+  border-bottom: 2px solid #8A0707;
+}
+.body-rid {
+  background-image: url(/assets/ssshape\ \(12\).svg);
+  z-index: -100;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  overflow-x: hidden;
+}
+.img-rid {
+  z-index: -2;
+  display: flex;
+  float: left !important;
+}
