--- a/style/style.css
+++ b/style/style.css
@@ -315,7 +315,7 @@ input[type="text"]:focus {
   border-bottom: 2px solid #8A0707;
 }
 .body-rid {
-  background-image: url(/assets/ssshape\ \(12\).svg);
+  background-image: url(../assets/ssshape\ \(12\).svg);
   z-index: -100;
   width: 100%;
   height: 100%;
