--- a/style/style.css
+++ b/style/style.css
@@ -254,30 +254,6 @@ body {
 
 
 /* RIDDLES PAGE */
-.box-around {
-  padding-top: 5rem;
-  display: flex ;
-  justify-content: center ;
-  font-size: 20px;
-  font-family: Diary;
-  color: #e5be5b;
-  font-weight: bold;
-}
-.inputs-riddles {
-  border: 2px solid #8A0707;
-  border-radius: 10px;
-  box-sizing: border-box;
-  height: 850px;
-  width: 400px;
-  padding-left: 2rem;
-  padding-right: 1rem;
-  box-shadow: #3C1B1B 0px 22px 70px 4px;
-  animation-name: floating;
-  animation-duration: 2s;
-  animation-iteration-count: 1;
-  animation-timing-function: ease-in-out;
-  background-color: #212121;
-}
 .svg-riddles {
   z-index: -1;
   left: 0;
@@ -285,18 +261,6 @@ body {
 }
 .riddles-paragraph-game {
   letter-spacing: 0.01rem;
-}
-/* Riddle Game */
-.reveal-btn {
-  background-color: transparent;
-  align-items: flex-start; 
-}
-.div-button {
-  justify-content: center;
-  display: flex;
-  margin-top: 1rem;
-  padding: auto; 
-  margin-bottom: 15rem;
 }
 .question{ 
   margin-top: 1.5rem;
@@ -323,11 +287,6 @@ input[type="text"]:focus {
   background-size: 100%;
   overflow-x: hidden;
 }
-.img-rid {
-  z-index: -2;
-  display: flex;
-  float: left !important;
-};
 .correct {
   color: #588157;
   display: inline;
@@ -349,10 +308,10 @@ input[type="text"]:focus {
 }
 .inputs-riddles{
   margin-top: 1rem;
-  margin-bottom: 10rem;
 }
 .button {
   margin-top: 2rem;
+  text-align: center;
 }
 .show{
   display: inline;
@@ -361,9 +320,39 @@ input[type="text"]:focus {
 .hide{
   display: none;
 }
-/* CSS */
+.box-around {
+  position: relative;
+  padding-top: 7rem;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10rem;
+}
 
-/* CSS */
+.box2 {
+  width: 80%;
+  max-width: 600px;
+  height: 80%;
+  font-size: 20px;
+  font-family: Diary;
+  color: #e5be5b;
+  font-weight: bold;  
+  background-color: #212121;
+  padding: 20px;
+  border-radius: 8px;
+  position: relative;
+  border-color: #8A0707;
+  border: 2px solid #8A0707;
+  box-shadow: #3C1B1B 0px 22px 70px 4px;
+  animation-name: floating;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+}
 #validate-button {
   background-color: #fbeee0;
   border: 2px solid #422800;
@@ -383,16 +372,13 @@ input[type="text"]:focus {
   touch-action: manipulation;
   font-family: Newspaper;
 }
-
 #validate-button:hover {
   background-color: #588157;
 }
-
 #validate-button:active {
   box-shadow: #422800 2px 2px 0 0;
   transform: translate(2px, 2px);
 }
-
 @media (min-width: 768px) {
   #validate-button {
     min-width: 60px;
@@ -418,23 +404,20 @@ input[type="text"]:focus {
   touch-action: manipulation;
   font-family: Newspaper;
 }
-
 #show-button:hover {
   background-color: #c1121f;
 }
-
 #show-button:active {
   box-shadow: #422800 2px 2px 0 0;
   transform: translate(2px, 2px);
 }
-
 @media (min-width: 768px) {
   #show-button {
     min-width: 60px;
     padding: 0 25px;
   }
 }
-
+/* RIDDLE PAGE END */
 
 /* POPUP BUTTON OPEN CLOSE */
 .popup-container {
@@ -491,3 +474,18 @@ input[type="text"]:focus {
   pointer-events: none;
 }
 /* POPUP END */
+/* COVER CSS START */
+/* COVER CSS END */
+
+/* DIARY START */
+.body-diary {
+  background-image: url(../assets/pack.png);
+  z-index: -100;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-color: none;
+  overflow-x: hidden;
+}
+/* DIARY END */
