--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,10 @@
   src: url(../assets/OldNewspaperTypes.ttf);
 }
 @font-face {
+  font-family: Calps;
+  src: url(../assets/CalpsSans-Regular.ttf);
+}
+@font-face {
   font-family: Murder;
   src: url(../assets/The\ Black\ Festival\ -\ DEMO.ttf);
 }
@@ -475,10 +479,116 @@ input[type="text"]:focus {
 }
 /* POPUP END */
 /* COVER CSS START */
-/* COVER CSS END */
+.cintro{
+  color: #e5be5b;
+  font-size: 14px;
+  font-family: sans-serif;
+  margin-top: 5rem;
+  text-align: center;
+}
+.cexplain {
+  font-family: Calps;
+  font-size: 20px;
+  color: #e5be5b
+}
+.cimg {
+  position: relative;
+  padding-top: 5rem;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10rem;
+}
+.cpa {
+  border: 2px solid #8A0707;
+  padding: 10px;
+  display: inline-block;
+}
+.cimg-t {
+  width: 50%;
+  height: 50%;
+  background-color: #8A0707;
+  padding: 25px;
+  border-radius: 8px;
+  position: relative;
+  border-color: #8A0707;
+  border: 2px solid #8A0707;
+  box-shadow: #EEF1BC 0px 20px 30px -10px;
+  animation-name: floating;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in-out;
+}
+.img-t {
+  height: 100%;
+  width: 100%;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+#ch3 {
+  font-family: Newspaper;
+}
+.underlined {
+  /*   background: red; */
+    position: relative;
+  }
+.underline-mask:after {
+    content: '';
+    position: absolute;
+    top: 95%;
+    width: 150%;
+    aspect-ratio: 3 / 1;
+    left: 50%;
+    transform: translate(-50%, 0);
+    border-radius: 50%;
+    border: 6px solid hsl(280 80% 50%);
+    /* Use a conic gradient mask to hide and show the bits you want */
+    --spread: 140deg;
+    --start: 290deg;
+    mask: conic-gradient(from var(--start), white 0 var(--spread), transparent var(--spread));
+}
+  
+  
+.underline-overflow {
+    display: inline-block;
+    /* A little extra padding and overflow hidden   */
+    overflow: hidden;
+    padding-bottom: clamp(1rem, 2vmin, 2rem);
+}
+.underline-overflow:after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    height: 150%;
+    aspect-ratio: 2.5 / 1;
+    left: 50%;
+    transform: translate(-50%, -10%);
+    border-radius: 50%;
+    border: 6px solid hsl(10 80% 50%);
+}
+  
+.underline-clip:after {
+    content: '';
+    position: absolute;
+    top: 95%;
+    width: 150%;
+    aspect-ratio: 3 / 1;
+    left: 50%;
+    transform: translate(-50%, 0);
+    border-radius: 50%;
+    border: 3.5px solid #c1121f;
+    /* Use a clip-path to hide and show the bits you want */
+    clip-path: polygon(0 0, 50% 50%, 100% 0);
+}
+
+  /* COVER CSS END */
 
 /* DIARY START */
-.body-diary {
+/* .body-diary {
   background-image: url(../assets/pack.png);
   z-index: -100;
   width: 100%;
@@ -487,5 +597,12 @@ input[type="text"]:focus {
   background-size: 100%;
   background-color: none;
   overflow-x: hidden;
+} */
+.img-d {
+  height: 100%;
+  width: 100%;
+  border-radius: 8px;
+  z-index: -3;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 /* DIARY END */
