--- a/style/style.css
+++ b/style/style.css
@@ -302,7 +302,6 @@ input[type="text"]:focus {
 }
 .correct {
   color: #588157;
-  display: inline;
 }
 .incorrect {
   color: #c1121f;
@@ -496,7 +495,7 @@ input[type="text"]:focus {
   text-align: center;
 }
 .cexplain {
-  font-family: Calps;
+  font-family: Mollas;
   font-size: 20px;
   color: #e5be5b
 }
