--- a/style/style2.css
+++ b/style/style2.css
@@ -157,17 +157,79 @@
 
   .overlay {
     position: absolute;
-    top: 10%;
+    top: 7%;
+    right: 20%;
     left: 23%;
-    padding: 10px;
+    padding: 10px;      
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
   }
+  .buttons {
+    bottom: 0;
+    position: absolute;
+    left: 23%;
+    right: 20%;
+    /* padding: 10px; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+.button-28 {
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #212121;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #e5be5b;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Mollas;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 30px;
+  min-width: 0;
+  max-width: 120px;
+  outline: none;
+  padding: 2px 5px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  will-change: transform;
+}
+
+.button-28:disabled {
+  pointer-events: none;
+}
+
+.button-28:hover {
+  color: #fff;
+  background-color: #1A1A1A;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button-28:active {
+  box-shadow: none;
+  transform: translateY(0);
+}
+
 
   .text {
     color: #212121;
     font-size: 1.9vw;
     font-weight: bold;
     font-family: Diarys;
-    max-width: 36%;
+    /* max-width: 36%; */
+    max-height: 10%;
+    padding: 10px;
   }
   .text2 {
     color: #212121;
@@ -175,6 +237,7 @@
     font-weight: bold;
     font-family: Diarys;
     max-width: 36%;
+    max-height: 10%;
     margin-right: 14rem;
     text-align: left;
   }
